html and react.js updates

--- a/index.html
+++ b/index.html
@@ -3,47 +3,304 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="LockedIn: Master your focus with Monk Mode, customizable timers, and habit tracking to overcome distractions and build discipline.">
+  <meta name="keywords" content="monk mode android, habit tracker, focus app, productivity, distraction blocker">
   <title>LockedIn - Master Your Focus</title>
-  <!-- This adds Tailwind CSS from a CDN (content delivery network) for easy styling -->
+  <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Google Fonts for a clean look, like monkapp.com -->
+  <!-- Google Fonts (Roboto for clean look) -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body class="bg-gray-900 text-white font-roboto min-h-screen flex flex-col">
-  <!-- Hero Section: Top part with title and description -->
-  <header class="py-12 px-4 text-center bg-gradient-to-b from-teal-800 to-gray-900">
-    <h1 class="text-4xl font-bold mb-4">LockedIn: Master Your Focus</h1>
-    <p class="text-lg mb-6 max-w-2xl mx-auto">
-      LockedIn is an upcoming app to help you overcome distractions like social media and gaming. Features include Monk Mode for distraction-free sessions, customizable focus timers, and habit tracking to build discipline and get your life back.
-    </p>
-    <button class="bg-teal-800 text-white px-6 py-3 rounded-full font-semibold opacity-50 cursor-not-allowed">
-      Coming Soon to Play Store
-    </button>
-  </header>
+<body class="bg-black text-white font-roboto min-h-screen flex flex-col">
+  <div id="root"></div>
 
-  <!-- Stay Updated Section: Email prompt -->
-  <section class="py-12 px-4 text-center bg-teal-800">
-    <h2 class="text-2xl font-bold mb-4">Stay Updated</h2>
-    <p class="mb-6">Be the first to know when LockedIn launches!</p>
-    <form id="emailForm" class="max-w-md mx-auto">
-      <input type="email" id="emailInput" placeholder="Enter your email" class="w-full p-3 mb-4 text-black rounded-lg">
-      <button type="submit" class="bg-white text-teal-800 px-6 py-3 rounded-full font-semibold">Notify Me</button>
-    </form>
-  </section>
+  <!-- React CDNs -->
+  <script src="https://cdn.jsdelivr.net/npm/react@18/umd/react.production.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/react-dom@18/umd/react-dom.production.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/babel-standalone@6.26.0/babel.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/framer-motion@10/dist/framer-motion.js"></script> <!-- Framer Motion CDN for animations -->
 
-  <!-- Footer -->
-  <footer class="py-6 px-4 bg-gray-900 text-center mt-auto">
-    <p>&copy; 2025 LockedIn. All rights reserved.</p>
-  </footer>
+  <script type="text/babel">
+    const { useState, useRef, motion, useInView } = window.FramerMotion;
 
-  <!-- JavaScript for email form (simple alert for now) -->
-  <script>
-    document.getElementById('emailForm').addEventListener('submit', function(e) {
-      e.preventDefault(); // Stop page reload
-      const email = document.getElementById('emailInput').value;
-      alert('Thank you! We\'ll notify ' + email + ' when LockedIn launches.');
-      document.getElementById('emailInput').value = ''; // Clear input
-    });
+    const App = () => {
+      const [email, setEmail] = useState('');
+
+      const handleEmailSubmit = (e) => {
+        e.preventDefault();
+        alert('Email submitted: ' + email); // Placeholder
+        setEmail('');
+      };
+
+      return (
+        <div className="min-h-screen flex flex-col">
+          {/* Hero Section */}
+          <header className="py-12 px-4 sm:px-6 lg:px-8 text-center bg-gradient-to-b from-teal-900 to-black relative overflow-hidden">
+            <motion.div
+              className="absolute inset-0 bg-teal-900 opacity-20"
+              initial={{ y: 0 }}
+              animate={{ y: '-10%' }}
+              transition={{ duration: 10, repeat: Infinity, repeatType: 'reverse' }}
+            />
+            <motion.h1
+              className="text-4xl sm:text-5xl font-bold mb-4 animate-fade-in relative z-10"
+              initial={{ opacity: 0, y: -50 }}
+              animate={{ opacity: 1, y: 0 }}
+              transition={{ duration: 1 }}
+            >
+              LockedIn: Master Your Focus
+            </motion.h1>
+            <motion.p
+              className="text-lg sm:text-xl mb-6 max-w-2xl mx-auto relative z-10"
+              initial={{ opacity: 0, y: -50 }}
+              animate={{ opacity: 1, y: 0 }}
+              transition={{ delay: 0.2, duration: 1 }}
+            >
+              Inspired by Monk Mode, LockedIn empowers you to overcome distractions like social media and gaming with focus timers, habit tracking, and distraction blocking.
+            </motion.p>
+            <motion.img
+              src="https://via.placeholder.com/300x600/000000/FFFFFF?text=LockedIn+App+Mockup"
+              alt="LockedIn App Mockup"
+              className="mx-auto mb-6 w-48 sm:w-64 rounded-lg shadow-lg relative z-10"
+              initial={{ opacity: 0, scale: 0.8 }}
+              animate={{ opacity: 1, scale: 1 }}
+              transition={{ delay: 0.4, duration: 1 }}
+            />
+            <motion.button
+              disabled
+              className="bg-teal-600 text-white px-6 py-3 rounded-full font-semibold opacity-50 cursor-not-allowed hover:bg-teal-700 transition relative z-10"
+              whileHover={{ scale: 1.05 }}
+              whileTap={{ scale: 0.95 }}
+            >
+              Coming Soon to Google Play
+            </motion.button>
+          </header>
+
+          {/* Features Section */}
+          <section className="py-12 px-4 sm:px-6 lg:px-8 bg-black">
+            <motion.h2
+              className="text-3xl font-bold text-center mb-8"
+              initial={{ opacity: 0, y: 50 }}
+              whileInView={{ opacity: 1, y: 0 }}
+              viewport={{ once: true }}
+              transition={{ duration: 1 }}
+            >
+              Why LockedIn?
+            </motion.h2>
+            <motion.div
+              className="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 max-w-5xl mx-auto"
+              initial="hidden"
+              whileInView="visible"
+              viewport={{ once: true }}
+              variants={{
+                visible: { transition: { staggerChildren: 0.2 } },
+              }}
+            >
+              <motion.div
+                className="p-6 bg-gray-900 rounded-lg shadow-md"
+                variants={{
+                  hidden: { opacity: 0, y: 50 },
+                  visible: { opacity: 1, y: 0 }
+                }}
+                transition={{ duration: 0.5 }}
+                whileHover={{ scale: 1.05 }}
+              >
+                <h3 className="text-xl font-semibold mb-2">Monk Mode</h3>
+                <p>Enter distraction-free sessions to stay laser-focused and productive.</p>
+              </motion.div>
+              <motion.div
+                className="p-6 bg-gray-900 rounded-lg shadow-md"
+                variants={{
+                  hidden: { opacity: 0, y: 50 },
+                  visible: { opacity: 1, y: 0 }
+                }}
+                transition={{ duration: 0.5 }}
+                whileHover={{ scale: 1.05 }}
+              >
+                <h3 className="text-xl font-semibold mb-2">Focus Timers</h3>
+                <p>Customizable timers from 18 minutes to 7 hours to build discipline.</p>
+              </motion.div>
+              <motion.div
+                className="p-6 bg-gray-900 rounded-lg shadow-md"
+                variants={{
+                  hidden: { opacity: 0, y: 50 },
+                  visible: { opacity: 1, y: 0 }
+                }}
+                transition={{ duration: 0.5 }}
+                whileHover={{ scale: 1.05 }}
+              >
+                <h3 className="text-xl font-semibold mb-2">Habit Tracking</h3>
+                <p>Track streaks and progress to stay motivated and conquer addictions.</p>
+              </motion.div>
+            </motion.div>
+          </section>
+
+          {/* Streak Preview Section */}
+          <section className="py-12 px-4 text-center bg-teal-900">
+            <motion.h3
+              className="text-2xl font-bold mb-4"
+              initial={{ opacity: 0, y: 50 }}
+              whileInView={{ opacity: 1, y: 0 }}
+              viewport={{ once: true }}
+              transition={{ duration: 1 }}
+            >
+              Build Your Streak
+            </motion.h3>
+            <motion.div
+              className="flex justify-center space-x-2"
+              initial="hidden"
+              whileInView="visible"
+              viewport={{ once: true }}
+              variants={{
+                visible: { transition: { staggerChildren: 0.1 } },
+              }}
+            >
+              {[1, 2, 3, 4, 5, 6, 7].map(day => (
+                <motion.div
+                  key={day}
+                  className="w-10 h-10 flex items-center justify-center rounded-full bg-gray-800 text-white cursor-pointer"
+                  variants={{
+                    hidden: { opacity: 0, scale: 0 },
+                    visible: { opacity: 1, scale: 1 }
+                  }}
+                  transition={{ type: 'spring', stiffness: 300 }}
+                  whileHover={{ scale: 1.2, backgroundColor: '#14B8A6' }}
+                >
+                  {day}
+                </motion.div>
+              ))}
+            </motion.div>
+          </section>
+
+          {/* Testimonials Section */}
+          <section className="py-12 px-4 bg-black">
+            <motion.h2
+              className="text-3xl font-bold text-center mb-8"
+              initial={{ opacity: 0, y: 50 }}
+              whileInView={{ opacity: 1, y: 0 }}
+              viewport={{ once: true }}
+              transition={{ duration: 1 }}
+            >
+              What Users Say
+            </motion.h2>
+            <motion.div
+              className="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 max-w-5xl mx-auto"
+              initial="hidden"
+              whileInView="visible"
+              viewport={{ once: true }}
+              variants={{
+                visible: { transition: { staggerChildren: 0.2 } },
+              }}
+            >
+              <motion.div
+                className="p-6 bg-gray-900 rounded-lg shadow-md"
+                variants={{
+                  hidden: { opacity: 0, y: 50 },
+                  visible: { opacity: 1, y: 0 }
+                }}
+                transition={{ duration: 0.5 }}
+                whileHover={{ scale: 1.05 }}
+              >
+                <p>"LockedIn helped me reclaim my time from endless scrolling."</p>
+                <p className="mt-4 font-bold">John Doe, Entrepreneur</p>
+              </motion.div>
+              <motion.div
+                className="p-6 bg-gray-900 rounded-lg shadow-md"
+                variants={{
+                  hidden: { opacity: 0, y: 50 },
+                  visible: { opacity: 1, y: 0 }
+                }}
+                transition={{ duration: 0.5 }}
+                whileHover={{ scale: 1.05 }}
+              >
+                <p>"The Monk Mode feature is a game-changer for productivity."</p>
+                <p className="mt-4 font-bold">Jane Smith, Student</p>
+              </motion.div>
+              <motion.div
+                className="p-6 bg-gray-900 rounded-lg shadow-md"
+                variants={{
+                  hidden: { opacity: 0, y: 50 },
+                  visible: { opacity: 1, y: 0 }
+                }}
+                transition={{ duration: 0.5 }}
+                whileHover={{ scale: 1.05 }}
+              >
+                <p>"Finally, an app that helps me break bad habits."</p>
+                <p className="mt-4 font-bold">Alex Johnson, Developer</p>
+              </motion.div>
+            </motion.div>
+          </section>
+
+          {/* Email Signup Section */}
+          <section className="py-12 px-4 sm:px-6 lg:px-8 bg-teal-900 text-center">
+            <motion.h2
+              className="text-2xl font-bold mb-4"
+              initial={{ opacity: 0, y: 50 }}
+              whileInView={{ opacity: 1, y: 0 }}
+              viewport={{ once: true }}
+              transition={{ duration: 1 }}
+            >
+              Get Notified
+            </motion.h2>
+            <motion.p
+              className="mb-6"
+              initial={{ opacity: 0, y: 50 }}
+              whileInView={{ opacity: 1, y: 0 }}
+              viewport={{ once: true }}
+              transition={{ delay: 0.2, duration: 1 }}
+            >
+              Be the first to know when LockedIn launches on Android!
+            </motion.p>
+            <motion.form
+              onSubmit={handleEmailSubmit}
+              className="max-w-md mx-auto"
+              initial={{ opacity: 0, y: 50 }}
+              whileInView={{ opacity: 1, y: 0 }}
+              viewport={{ once: true }}
+              transition={{ delay: 0.4, duration: 1 }}
+            >
+              <input
+                type="email"
+                value={email}
+                onChange={(e) => setEmail(e.target.value)}
+                placeholder="Enter your email"
+                className="w-full p-3 mb-4 text-black rounded-lg"
+              />
+              <motion.button
+                type="submit"
+                className="bg-white text-teal-900 px-6 py-3 rounded-full font-semibold hover:bg-gray-200 transition"
+                whileHover={{ scale: 1.05 }}
+                whileTap={{ scale: 0.95 }}
+              >
+                Notify Me
+              </motion.button>
+            </motion.form>
+          </section>
+
+          {/* Footer */}
+          <footer className="py-6 px-4 bg-black text-center mt-auto">
+            <p>&copy; 2025 LockedIn. All rights reserved.</p>
+            <a href="/privacy" className="text-teal-400 hover:underline">Privacy Policy</a>
+          </footer>
+        </div>
+      );
+    };
+
+    // Render React app
+    ReactDOM.render(<App />, document.getElementById('root'));
+
+    // Custom animation for fade-in effect
+    const styleSheet = document.createElement('style');
+    styleSheet.textContent = `
+      @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(10px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+      .animate-fade-in {
+        animation: fadeIn 1s ease-in-out;
+      }
+    `;
+    document.head.appendChild(styleSheet);
   </script>
 </body>
 </html>
