--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,17 +12,19 @@
   <!-- Google Fonts (Roboto for clean look) -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body class="bg-black text-white font-roboto min-h-screen flex flex-col">
+<body class="bg-gray-900 text-stone-100 font-roboto min-h-screen flex flex-col">
   <div id="root"></div>
 
   <!-- React CDNs -->
   <script src="https://cdn.jsdelivr.net/npm/react@18/umd/react.production.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/react-dom@18/umd/react-dom.production.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/babel-standalone@6.26.0/babel.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/framer-motion@10/dist/framer-motion.js"></script> <!-- Framer Motion CDN for animations -->
+  <!-- Framer Motion CDN (correct global export) -->
+  <script src="https://cdn.jsdelivr.net/npm/framer-motion@10/dist/framer-motion.development.js"></script>
 
   <script type="text/babel">
-    const { useState, useRef, motion, useInView } = window.FramerMotion;
+    // Access Framer Motion correctly
+    const { useState, useEffect, useRef, motion, useInView } = window.framerMotion || window.FramerMotion || { motion: {}, useInView: () => ({}) };
 
     const App = () => {
       const [email, setEmail] = useState('');
@@ -35,7 +38,7 @@
       return (
         <div className="min-h-screen flex flex-col">
           {/* Hero Section */}
-          <header className="py-12 px-4 sm:px-6 lg:px-8 text-center bg-gradient-to-b from-teal-900 to-black relative overflow-hidden">
+          <header className="py-12 px-4 sm:px-6 lg:px-8 text-center bg-gradient-to-b from-teal-800 to-gray-900 relative overflow-hidden h-[80vh]">
             <motion.div
               className="absolute inset-0 bg-teal-900 opacity-20"
               initial={{ y: 0 }}
@@ -43,7 +46,7 @@
               transition={{ duration: 10, repeat: Infinity, repeatType: 'reverse' }}
             />
             <motion.h1
-              className="text-4xl sm:text-5xl font-bold mb-4 animate-fade-in relative z-10"
+              className="text-4xl sm:text-5xl font-bold mb-4 relative z-10"
               initial={{ opacity: 0, y: -50 }}
               animate={{ opacity: 1, y: 0 }}
               transition={{ duration: 1 }}
@@ -59,7 +62,7 @@
               Inspired by Monk Mode, LockedIn empowers you to overcome distractions like social media and gaming with focus timers, habit tracking, and distraction blocking.
             </motion.p>
             <motion.img
-              src="https://via.placeholder.com/300x600/000000/FFFFFF?text=LockedIn+App+Mockup"
+              src="https://via.placeholder.com/300x600/1A5C4C/E8E3D3?text=LockedIn+App+Mockup"
               alt="LockedIn App Mockup"
               className="mx-auto mb-6 w-48 sm:w-64 rounded-lg shadow-lg relative z-10"
               initial={{ opacity: 0, scale: 0.8 }}
@@ -68,7 +71,7 @@
             />
             <motion.button
               disabled
-              className="bg-teal-600 text-white px-6 py-3 rounded-full font-semibold opacity-50 cursor-not-allowed hover:bg-teal-700 transition relative z-10"
+              className="bg-teal-800 text-stone-100 px-6 py-3 rounded-full font-semibold opacity-50 cursor-not-allowed hover:bg-teal-700 transition relative z-10"
               whileHover={{ scale: 1.05 }}
               whileTap={{ scale: 0.95 }}
             >
@@ -77,7 +80,7 @@
           </header>
 
           {/* Features Section */}
-          <section className="py-12 px-4 sm:px-6 lg:px-8 bg-black">
+          <section className="py-12 px-4 sm:px-6 lg:px-8 bg-gray-900">
             <motion.h2
               className="text-3xl font-bold text-center mb-8"
               initial={{ opacity: 0, y: 50 }}
@@ -97,7 +100,7 @@
               }}
             >
               <motion.div
-                className="p-6 bg-gray-900 rounded-lg shadow-md"
+                className="p-6 bg-teal-900 rounded-lg shadow-md"
                 variants={{
                   hidden: { opacity: 0, y: 50 },
                   visible: { opacity: 1, y: 0 }
@@ -109,7 +112,7 @@
                 <p>Enter distraction-free sessions to stay laser-focused and productive.</p>
               </motion.div>
               <motion.div
-                className="p-6 bg-gray-900 rounded-lg shadow-md"
+                className="p-6 bg-teal-900 rounded-lg shadow-md"
                 variants={{
                   hidden: { opacity: 0, y: 50 },
                   visible: { opacity: 1, y: 0 }
@@ -121,7 +124,7 @@
                 <p>Customizable timers from 18 minutes to 7 hours to build discipline.</p>
               </motion.div>
               <motion.div
-                className="p-6 bg-gray-900 rounded-lg shadow-md"
+                className="p-6 bg-teal-900 rounded-lg shadow-md"
                 variants={{
                   hidden: { opacity: 0, y: 50 },
                   visible: { opacity: 1, y: 0 }
@@ -173,7 +176,7 @@
           </section>
 
           {/* Testimonials Section */}
-          <section className="py-12 px-4 bg-black">
+          <section className="py-12 px-4 bg-gray-900">
             <motion.h2
               className="text-3xl font-bold text-center mb-8"
               initial={{ opacity: 0, y: 50 }}
@@ -193,7 +196,7 @@
               }}
             >
               <motion.div
-                className="p-6 bg-gray-900 rounded-lg shadow-md"
+                className="p-6 bg-teal-900 rounded-lg shadow-md"
                 variants={{
                   hidden: { opacity: 0, y: 50 },
                   visible: { opacity: 1, y: 0 }
@@ -205,7 +208,7 @@
                 <p className="mt-4 font-bold">John Doe, Entrepreneur</p>
               </motion.div>
               <motion.div
-                className="p-6 bg-gray-900 rounded-lg shadow-md"
+                className="p-6 bg-teal-900 rounded-lg shadow-md"
                 variants={{
                   hidden: { opacity: 0, y: 50 },
                   visible: { opacity: 1, y: 0 }
@@ -217,7 +220,7 @@
                 <p className="mt-4 font-bold">Jane Smith, Student</p>
               </motion.div>
               <motion.div
-                className="p-6 bg-gray-900 rounded-lg shadow-md"
+                className="p-6 bg-teal-900 rounded-lg shadow-md"
                 variants={{
                   hidden: { opacity: 0, y: 50 },
                   visible: { opacity: 1, y: 0 }
@@ -278,7 +281,7 @@
           </section>
 
           {/* Footer */}
-          <footer className="py-6 px-4 bg-black text-center mt-auto">
+          <footer className="py-6 px-4 bg-gray-900 text-center mt-auto">
             <p>&copy; 2025 LockedIn. All rights reserved.</p>
             <a href="/privacy" className="text-teal-400 hover:underline">Privacy Policy</a>
           </footer>
